// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Score /> adds a valid attempt 1`] = `
<Score
  attempts={
    Immutable.List [
      Immutable.Map {
        "word": "someword",
        "score": "8",
      },
    ]
  }
>
  <styled.div>
    <div
      className="sc-ckVGcZ deNXbv"
    >
      <styled.header>
        <header
          className="sc-jKJlTe llqPuH"
        >
          <h2>
            Score: 
          </h2>
        </header>
      </styled.header>
      <styled.section>
        <section
          className="sc-eNQAEJ dpyPWj"
        >
          <Attempts
            attempts={
              Immutable.List [
                Immutable.Map {
                  "word": "someword",
                  "score": "8",
                },
              ]
            }
          >
            <styled.table>
              <table
                className="sc-bdVaJa hgWqJP"
              >
                <tbody>
                  <tr
                    key="0"
                  >
                    <styled.td>
                      <td
                        className="sc-bwzfXH bveNbs"
                      >
                        someword
                      </td>
                    </styled.td>
                    <styled.td>
                      <td
                        className="sc-bwzfXH bveNbs"
                      >
                        8
                      </td>
                    </styled.td>
                  </tr>
                </tbody>
              </table>
            </styled.table>
          </Attempts>
        </section>
      </styled.section>
    </div>
  </styled.div>
</Score>
`;

exports[`<Score /> adds an invalid attempt 1`] = `
<Score
  attempts={
    Immutable.List [
      Immutable.Map {
        "word": "someword",
        "score": "✘",
      },
    ]
  }
>
  <styled.div>
    <div
      className="sc-ckVGcZ deNXbv"
    >
      <styled.header>
        <header
          className="sc-jKJlTe llqPuH"
        >
          <h2>
            Score: 
          </h2>
        </header>
      </styled.header>
      <styled.section>
        <section
          className="sc-eNQAEJ dpyPWj"
        >
          <Attempts
            attempts={
              Immutable.List [
                Immutable.Map {
                  "word": "someword",
                  "score": "✘",
                },
              ]
            }
          >
            <styled.table>
              <table
                className="sc-bdVaJa hgWqJP"
              >
                <tbody>
                  <tr
                    key="0"
                  >
                    <styled.td>
                      <td
                        className="sc-bwzfXH bveNbs"
                      >
                        someword
                      </td>
                    </styled.td>
                    <styled.td>
                      <td
                        className="sc-bwzfXH bveNbs"
                      >
                        ✘
                      </td>
                    </styled.td>
                  </tr>
                </tbody>
              </table>
            </styled.table>
          </Attempts>
        </section>
      </styled.section>
    </div>
  </styled.div>
</Score>
`;

exports[`<Score /> shows the score 1`] = `
<Score
  attempts={Immutable.List []}
  counter={8}
>
  <styled.div>
    <div
      className="sc-ckVGcZ deNXbv"
    >
      <styled.header>
        <header
          className="sc-jKJlTe llqPuH"
        >
          <h2>
            Score: 
            8
          </h2>
        </header>
      </styled.header>
      <styled.section>
        <section
          className="sc-eNQAEJ dpyPWj"
        >
          <Attempts
            attempts={Immutable.List []}
          >
            <styled.table>
              <table
                className="sc-bdVaJa hgWqJP"
              >
                <tbody>
                  <undefined />
                </tbody>
              </table>
            </styled.table>
          </Attempts>
        </section>
      </styled.section>
    </div>
  </styled.div>
</Score>
`;
